# langgraph_agents

./: .gitignore  README.md  pyproject.toml
mail_assistent/: mail_assistant.py  testing.ipynb
research_assistent/: custom_tools.py  database_document_setup.py  research_agent.py
research_assistent/docs/saves/: 2025-05-28 14:24:24.743894_pm4py_research.txt  2025-05-28 15:14:49.288589_food_in_pm.txt  2025-05-28 15:17:11.368052_food_in_pm.txt  2025-05-28 15:34:06.000291_SFA_SAX.txt
